--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -308,7 +308,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="form-group">
+                                                        <div class="form-group calendarDiv">
                                                             <label class="control-label col-sm-4" for="pwd">Day/Time</label>
                                                             <div class="col-sm-8 dateTimeDiv">
                                                                 <span class="glyphicon glyphicon-ok calendarOk"></span>
