--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -76,7 +76,7 @@
                                         <a href="#">
                                             <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-user setmore-icon-fsize"></span> </div>
                                             <div class="nav-dropdown-desc-holder">
-                                                <h3 class="nav-dropdown-desc-header">test@gmail.com</h3>
+                                                <h3 class="nav-dropdown-desc-header">{{companyEmail}}</h3>
                                                 <p class="nav-dropdown-desc-text">Username/password</p>
                                             </div>
                                             <div class="clear"></div>
@@ -217,6 +217,7 @@
                                     <div class="col-sm-5 text-right">
                                         <div class="complete_div">
                                             <a title="">{{item.BookingStatusDisplay}}</a>
+                                           
                                         </div>
                                     </div>
                                     <div class="clearfix"></div>
