--- a/AngularMvcProject/App/View/Setting/Services.html
+++ b/AngularMvcProject/App/View/Setting/Services.html
@@ -77,7 +77,7 @@
                                         <a href="#">
                                             <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-user setmore-icon-fsize"></span> </div>
                                             <div class="nav-dropdown-desc-holder">
-                                                <h3 class="nav-dropdown-desc-header">test@gmail.com</h3>
+                                                <h3 class="nav-dropdown-desc-header">{{companyEmail}}</h3>
                                                 <p class="nav-dropdown-desc-text">Username/password</p>
                                             </div>
                                             <div class="clear"></div>
