Add password as part of AddCustomer

--- a/AngularMvcProject/App/View/Customer/customer.html
+++ b/AngularMvcProject/App/View/Customer/customer.html
@@ -328,9 +328,9 @@
                                             <h3 class="addCustomerTitle">Add New Customer</h3>
                                             <div class="addcustomerContent">
                                                 <div class="customerField">
-                                                    <input id="customerName" class="form-control" type="text" placeholder="Name" name="customerName" ng-model="customerName" required>
+                                                    <input id="customerName"     class="form-control" type="text"  placeholder="Name"     name="customerName"     ng-model="customerName" required>
                                                     <input class="form-control emailField" type="text" placeholder="E-mail" name="customerEmail" ng-model="customerEmail" required>
-                                                    <input class="form-control emailField" type="text" placeholder="Password" name="customerEmail" ng-model="customerEmail" required>
+                                                    <input id="customerPassword" class="form-control" type="text" placeholder="Password" name="customerPassword" ng-model="customerPassword" required>
                                                 </div>
                                                 <div class="customerField row form-group">
                                                     <div class="col-md-2 col-sm-2 col-xs-2  userNumber">
