--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -103,7 +103,7 @@
                                         </a>
                                     </li>
                                     <li id="sign_out" class="nav-dropdown-li-last">
-                                        <a href="/logout.do">
+                                        <a ng-click="Logout()">
                                             <div class="nav-dropdown-icon-holder"> <span class="setmore-icon-log-out setmore-icon-fsize"></span> </div>
                                             <div class="nav-dropdown-desc-holder">
                                                 <h3 class="nav-dropdown-desc-header">Sign Out</h3>
